Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,13 +87,43 @@ stages:
     pool:
       vmImage: 'windows-latest'
 
-    - task: AzureRmWebAppDeployment@4
-      inputs:
-        ConnectionType: 'AzureRM'
-        azureSubscription: 'PAVR RDC Internal Subscription(37ef8c03-e8ac-4ea3-91dd-f5ab71cd09d3)'
-        appType: 'webApp'
-        WebAppName: '$(WebsiteName)'
-        packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
+    environment: 'Dev'
+    strategy:
+     runOnce:
+        deploy:
+          steps:
+          - task: AzureRmWebAppDeployment@4
+            inputs:
+              ConnectionType: 'AzureRM'
+              azureSubscription: 'PAVR RDC Internal Subscription(37ef8c03-e8ac-4ea3-91dd-f5ab71cd09d3)'
+              appType: 'webApp'
+              WebAppName: '$(WebsiteName)'
+              deployToSlotOrASE: true
+              ResourceGroupName: '$(ResourceGroupName)'
+              SlotName: 'Dev'
+              packageForLinux: '$(Pipeline.Workspace)/**/*.zip'
+
+  - deployment: DeployTOStage
+    displayName: Deploy To Stage
+
+    pool:
+      vmImage: 'windows-latest'
+
+    environment: 'Staging'
+    strategy:
+     runOnce:
+        deploy:
+          steps:
+          - task: AzureRmWebAppDeployment@4
+            inputs:
+              ConnectionType: 'AzureRM'
+              azureSubscription: 'PAVR RDC Internal Subscription(37ef8c03-e8ac-4ea3-91dd-f5ab71cd09d3)'
+              appType: 'webApp'
+              WebAppName: '$(WebsiteName)'
+              deployToSlotOrASE: true
+              ResourceGroupName: '$(ResourceGroupName)'
+              SlotName: 'Staging'
+              packageForLinux: '$(Pipeline.Workspace)/**/*.zip'
 
 - stage: DeployToPROD
   displayName: Deploy To PROD
@@ -103,3 +133,18 @@ stages:
 
     pool:
       vmImage: 'windows-latest'
+
+
+    environment: 'PROD'
+    strategy:
+     runOnce:
+        deploy:
+          steps:
+
+          - task: AzureRmWebAppDeployment@4
+            inputs:
+              ConnectionType: 'AzureRM'
+              azureSubscription: 'PAVR RDC Internal Subscription(37ef8c03-e8ac-4ea3-91dd-f5ab71cd09d3)'
+              appType: 'webApp'
+              WebAppName: '$(WebsiteName)'
+              packageForLinux: '$(Pipeline.Workspace)/**/*.zip'
